<resources>
    <string name="app_name">SharedRent</string>
    <string name="header_tenant_name">Tenant</string>
    <string name="header_income">Income</string>
    <string name="header_livingArea">Area</string>
    <string name="header_percent_livingArea">% Area</string>
    <string name="header_percent_rent">% Rent</string>
    <string name="header_calculatedRent">Rent</string>
    <string name="addFlatButton">add flat</string>
    <string name="deleteFlatButton">delete flat</string>
    <string name="funds_after_rent">Funds after rent</string>
    <string name="header_room_msq">Own room</string>
    <string name="share_modes">share-mode</string>
    <string name="equal_residual_fund_menu_item">Communism</string>
    <string name="proportional_share_menu_item">Socialism</string>
    <string name="area_only_share_menu_item">Capitalism</string>
    <string name="red_title">Communist Mode</string>
    <string name="green_title">Capitalist Mode</string>
    <string name="purple_title">Socialist Mode</string>
    <string name="go_to_README_url">Info</string>
    <string name="READMEurl">https://github.com/PremKolar/SharedRent/blob/main/README.md</string>
</resources>