<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="tenant"
            type="com.example.sharedrent.Tenant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">


        <TableLayout
            android:id="@+id/row_session_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:minHeight="25pt"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
            <TableRow>
            <TextView
                android:id="@+id/tenantsName"
                android:text="@{tenant.name}"
                android:textStyle="bold"
                android:textSize="14dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/header_income"
                    android:textStyle="bold"
                    android:paddingHorizontal="10dp"
                    />
                <TextView
                    android:text="@string/header_livingArea"
                    android:textStyle="bold"
                    android:paddingHorizontal="10dp"
                    />
                <TextView
                    android:text="@string/header_percent_livingArea"
                    android:textStyle="bold"
                    android:paddingHorizontal="10dp"
                    />
                <TextView
                    android:text="@string/header_percent_rent"
                    android:textStyle="bold"
                    android:paddingHorizontal="10dp"
                    />
                <TextView
                    android:text="@string/header_calculatedRent"
                    android:textStyle="bold"
                    android:paddingHorizontal="10dp"
                    />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/editable_income"
                    android:text="@{tenant.getIncomeFormatted()}"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="2dp"
                    android:cursorVisible="false"
                    android:background="@null"
                    />
                <EditText
                    android:id="@+id/editable_area"
                    android:text="@{tenant.getLivingAreaFormatted()}"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="2dp"
                    android:background="@null"
                    />
                <TextView
                    android:text="@{tenant.getRelativeLivingAreaPercentFormatted()}"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="2dp"
                    />
                <TextView
                    android:text="@{tenant.getRentPercentFormatted()}"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="2dp"
                    />
                <TextView
                    android:text="@{tenant.getRentFormatted()}"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="2dp"
                    />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>